src/styles-index.css
:root {
  --first-color: #d4e0f5;
  --second-color: #1f3d6b;
  --first-font: "Playfair Display", serif;
  --second-font: "Poppins", sans-serif;
  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
}

body {
  background-color: var(--first-color);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-align: center;
  font-family: var(--first-font);
  color: var(--second-color);
}

h1 {
  font-size: 96px;
  font-weight: bold;
}

h2 {
  font-size: 64px;
}

p {
  color: var(--second-color);
  font-family: var(--second-font);
  font-size: 40px;
  margin: 10px auto;
  max-width: 1000px;
}
a {
  text-decoration: none;
  color: #0d6efd;
}
.body-text {
  margin: 60px auto;
  text-align: center;
}

.btn-primary {
  background: var(--second-color);
  font-family: var(--second-font);
  border-radius: 4px;
  color: white;
  font-size: 20px;
  line-height: 27px;
  padding: 19px 0px;
  margin: 20px 0px;
  margin-bottom: 70px;
  box-shadow: var(--box-shadow);
  width: 285px;
  height: 64px;
}

.general-pic {
  margin: 0px auto;
  box-shadow: var(--box-shadow);
}

.main {
  max-width: 1200px;
  color: var(--second-color);
  font-family: var(--second-font);
  font-size: 20px;
  font-weight: normal;
  text-align: left;
}
.titleOfParagraph {
  font-size: 25px;
  font-weight: 600;
  font-family: var(--second-font);
}
.titleOfSkills {
  font-weight: 400;
  font-style: italic;
}
.experience {
  list-style: none;
  padding-left: 0px;
}

.col-10 {
  line-height: 30px;
}

.about-section h1 {
  font-size: 64px;
}

.about-section h2 {
  font-size: 40px;
  margin-top: 60px;
}

.about-section p {
  font-size: 20px;
  line-height: 1.5;
}

.sahar-about-pic {
  margin: 60px 60px;
  box-shadow: var(--box-shadow);
  width: 400px;
}

.about-section .btn-primary {
  margin-top: 10px;
}

.italic-text {
  font-style: italic;
}
.date {
  font-size: 15px;
}
.link {
  font-family: var(--second-font);
  font-size: 20px;
  font-weight: normal;
}
.contact-section h3 {
  font-size: 32px;
}
.contact-section {
  margin: 20px auto;
  text-align: center;
  margin-top: 74px;
}

i .header {
  color: #1f3d6b;
  font-size: 32px;
}

footer {
  color: var(--second-color);
  margin-top: 30px;
  background-color: white;
}

footer .copy-right {
  font-size: 10px;
}
.social-links {
  margin-top: 20px;
  margin-bottom: 10px;
}
footer .social-links a {
  padding: 11px 11px;
  border-radius: 50%;
  font-size: 18px;
  transition: all 100ms ease-in-out;
}

footer .social-links a:hover {
  color: #0d6efd;
  background: var(--first-color);
}
.logo {
  padding: 10px;
}

.look-works {
  margin-top: 60px;
}

@media (max-width: 900px) {
  h1 {
    font-size: 48px;
    line-height: 1.5;
  }

  h2 {
    font-size: 32px;
    text-align: center;
  }
  p {
    text-align: center;
    font-size: 25px;
    margin-bottom: 20px;
  }
  .body-text {
    margin: 10px 20px;
  }
  .container {
    font-size: 15px;
    font-weight: normal;
    text-align: left;
    margin-top: 25px;
    text-align: center;
  }
  .titleOfParagraph {
    font-size: 15px;
    font-weight: 600;
  }
  .btn-primary {
    margin: 0px auto;
    text-align: center;
  }
  .content {
    margin-bottom: 0px;
    text-align: left;
  }
  .experience {
    margin-bottom: 0px;
  }
  .about-section h2 {
    margin-top: 10px;
  }
  .body-text.about-section {
    margin: 20px auto;
    text-align: center;
  }
  .sahar-about-pic {
    margin: 0px auto;
    margin-top: 60px;
  }
  .contact-section h3 {
    font-size: 20px;
    font-weight: 600;
  }
  .contact-section a {
    font-size: 15px;
  }
  .contact-section h2 {
    margin-top: 60px;
  }
  footer {
    margin-top: 60px;
  }
  .social-links {
    display: flex;
    justify-content: center;
    margin: 0px auto;
  }
}

